mini fixes de estilos para mejorar legibilidad

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -47,22 +47,22 @@
 
 #brandBar .btn-busquedas{
   padding: 4px 10px;
-  border-radius: 0px;
+  margin-top: -1px;
+  border-radius: 2px;
   outline: 0;
   background: rgba(255, 255, 255, 0.15);
 }
 #brandBar .btn-busquedas:hover{
-  /*padding: 5px 11px;*/
   box-shadow: 3px 3px 5px #424242;
   background: #ffffff60;
 }
 #brandBar .btn-busquedas i:before, #brandBar .btn-busquedas i:after{
   font-size: 1.75em!important;
   color: #fafafa !important;
-  text-shadow: 2px 2px 2px #564c4c;
+  text-shadow: 1px 1px 1px #333333;
 }
 #brandBar .btn-busquedas:hover i:before, #brandBar .btn-busquedas:hover i:after{
-  /*font-size: 1.5em!important;*/
+  text-shadow: 1px 1px 1px #a0a0a0;
   color: #423434 !important;
 }
 .titulo-busquedas{
