--- a/app/assets/stylesheets/inicio.scss
+++ b/app/assets/stylesheets/inicio.scss
@@ -46,7 +46,7 @@ header {
 #buscadores .btn-busquedas i:before, #buscadores .btn-busquedas i:after{
   font-size: 2.5em!important;
   color: #423434 !important;
-  text-shadow: 2px 2px 2px #cecece;
+  text-shadow: 1px 1px 0px #a0a0a0;
 }
 #buscadores .btn-busquedas:hover i:before, #buscadores .btn-busquedas:hover i:after{
   font-size: 2em!important;
